[package]
name = "stream-fusion"
version = "0.1.0"
authors = ["Don Stewart <dons@fb.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "*"
num-traits = "*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "basics"
harness = false
